fix: white space render

--- a/src/form.css
+++ b/src/form.css
@@ -12,6 +12,10 @@ input[type="checkbox"] {
   accent-color: black;
 }
 
+span {
+  white-space: normal;
+}
+
 .form {
   position: relative;
   display: grid;
